--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -43,5 +43,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-  }
+  },
+  "proxy": "http://localhost:7070"
+
 }
