--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^8.1.0",
     "nodemailer": "^7.0.3",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.6"
   }
 }
