--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^8.1.0",
     "nodemailer": "^7.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-toastify": "^11.0.5",
-    "swiper": "^11.2.6"
+    "swiper": "^11.0.7"
   }
 }
