Fix project dependencies - Removed old node_modules and package-lock.json - Reinstalled frontend, backend, and root dependencies - Resolved React and Swiper version conflicts - Ensured consistent React version across the project

--- a/package.json
+++ b/package.json
@@ -12,10 +12,6 @@
   "dependencies": {
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^8.1.0",
-    "nodemailer": "^7.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-toastify": "^11.0.5",
-    "swiper": "^11.0.7"
+    "nodemailer": "^7.0.3"
   }
 }
