--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^8.1.0",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "webpack-dev-server": "^5.2.2"
   }
 }
