--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -7,16 +7,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "i18next": "^25.5.2",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
+    "react-i18next": "^15.7.3",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
+    "react-toastify": "^11.0.5",
     "swiper": "^9.4.1",
-    "react-toastify": "^11.0.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,5 +49,4 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "proxy": "http://localhost:7070"
-
 }
