--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "concurrently": "^8.2.0"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^8.1.0",
     "nodemailer": "^7.0.3",
