--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "framer-motion": "^12.23.25",
     "i18next": "^25.5.2",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
