--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -2,6 +2,9 @@
   "name": "project-1",
   "version": "0.1.0",
   "private": true,
+  "overrides": {
+    "ajv": "^6.12.6"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
