fix: force ajv v6 via overrides for CRA build

--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "overrides": {
-    "ajv": "^6.12.6"
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -22,9 +23,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "swiper": "^9.4.1",
-    "web-vitals": "^2.1.4",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
