--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "overrides": {
-    "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2"
+    "ajv": "8.12.0",
+    "ajv-formats": "2.1.1",
+    "ajv-keywords": "5.1.0"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
