--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^8.1.0",
     "nodemailer": "^7.0.3",
+    "resend": "^6.6.0",
     "webpack-dev-server": "^5.2.2"
   }
 }
