--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
